--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "~1.9.1",
     "mws-api": "^3.0.0",
     "mysql": "^2.18.1",
+    "node-cron": "^3.0.2",
     "nodemon": "^2.0.22",
     "string-format": "^2.0.0",
     "url": "^0.11.0",
