--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "node --max-old-space-size=8192 ./bin/www",
+    "dev": "nodemon --max-old-space-size=8192 ./bin/www"
   },
   "dependencies": {
     "amazon-mws": "0.0.27",
